# go/src/internal/handler/users.go
@@ -3,24 +3,25 @@ package handler
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/kynmh69/mormorare/internal/domain"
+	"github.com/kynmh69/mormorare/pkg/logging"
 	"gorm.io/gorm"
 	"net/http"
 	"time"
 )
 
 type User struct {
-	UserName string    `binding:"required" example:"test1"`
-	Password string    `binding:"required" example:"password"`
-	Email    string    `binding:"required" example:"example@test.com"`
-	BirthDay time.Time `binding:"required" time_format:"2006-01-02" example:"2006-01-02"`
+	UserName string    `form:"username" binding:"required"`
+	Password string    `form:"password" binding:"required"`
+	Email    string    `form:"email" binding:"required"`
+	BirthDay time.Time `form:"birthday" time_format:"2006-01-02" time_utc:"0" binding:"required"`
 }
 
 type DeleteUser struct {
-	UserName string `binding:"required" example:"test1"`
+	UserName string `uri:"username" binding:"required" example:"test1"`
 }
 
 type UserResponse struct {
-	UserName string    `json:"user_name" example:"test1"`
+	UserName string    `json:"username" example:"test1"`
 	Email    string    `json:"email" example:"example@test.com"`
 	BirthDay time.Time `json:"birth_day" example:"2006-01-02"`
 }
@@ -37,14 +38,21 @@ func NewUserHandler(db *gorm.DB) *UserHandler {
 // @Summary Create a new user
 // @Description Create a new user
 // @Tags users
+// @Accept json
 // @Produce json
+// @Param user_name body string true "set username"
+// @Param password body string true "set password"
+// @Param email body string true "set email"
+// @Param birthday body string true "set birthday"
 // @Success 201 {object} UserResponse
 // @Failure 400 {object} domain.ErrorJson
 // @Router /api/v1/users [post]
 func (u *UserHandler) Create(ctx *gin.Context) {
+	logger := logging.GetLogger()
 	// Create user
 	var newUser User
 	if err := ctx.ShouldBindJSON(&newUser); err != nil {
+		logger.Error(err)
 		ctx.AbortWithStatusJSON(http.StatusBadRequest, domain.NewErrorJson(err.Error()))
 		return
 	}
@@ -98,6 +106,14 @@ func (u *UserHandler) Retrieve(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, resp)
 }
 
+// Delete
+// @Summary Delete a user
+// @Description Delete a user
+// @Tags users
+// @Param user_name path string true "set username"
+// @Success 204
+// @Failure 400 {object} domain.ErrorJson
+// @Router /api/v1/users/{user_name} [delete]
 func (u *UserHandler) Delete(ctx *gin.Context) {
 	// Delete user
 	var deleteUser DeleteUser
